--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
 .canvas {
     max-width: 100%;
     height: auto;
-    margin-top: 8rem;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
 }
 
 .container {
