--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-    display: grid;
     overflow: auto;
 }
 
@@ -13,6 +12,7 @@ body {
 .container {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     max-width: 90%;
     height: auto;
     margin-top: 3rem;
@@ -65,7 +65,6 @@ body {
 }
 
 .supervisor-card {
-    position: relative;
     width: 93%;
     height: auto;
     padding-left: 1rem;
@@ -73,10 +72,10 @@ body {
     padding-bottom: 6rem;
     margin-bottom: 3rem;
     box-sizing: border-box;
-    border: 2px  hsl(0, 0%, 98%) solid;
+    border: 2px  hsl(0, 0%, 98%);
     border-radius: 0.5rem; 
     border-top: 0.25rem solid hsl(180, 62%, 55%);
-    box-shadow: -5px 8px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
 }
 
 .supervisor-title {
@@ -108,7 +107,6 @@ body {
 }
 
 .team-builder-card {
-    position: relative;
     width: 93%;
     height: auto;
     padding-left: 1rem;
@@ -119,7 +117,7 @@ body {
     border: 2px  hsl(0, 0%, 98%);
     border-radius: 0.5rem;
     border-top: 0.25rem solid hsl(0, 78%, 62%);
-    box-shadow: -5px 8px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
 }
 
 .team-builder-title {
@@ -151,7 +149,6 @@ body {
 }
 
 .karma-card {
-    position: relative;
     width: 93%;
     height: auto;
     padding-left: 1rem;
@@ -162,7 +159,7 @@ body {
     border: 2px  hsl(0, 0%, 98%);
     border-radius: 0.5rem;
     border-top: 0.25rem solid hsl(34, 97%, 64%);
-    box-shadow: -5px 8px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
 }
 
 .karma-title {
@@ -195,7 +192,6 @@ body {
 }
 
 .calculator-card {
-    position: relative;
     width: 93%;
     height: auto;
     padding-left: 1rem;
@@ -206,7 +202,7 @@ body {
     border: 2px  hsl(0, 0%, 98%);
     border-top: 0.25rem solid hsl(212, 86%, 64%);
     border-radius: 0.5rem;
-    box-shadow: -5px 8px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
 }
 
 .calculator-title {
@@ -236,4 +232,129 @@ body {
     padding-top: 0.8rem;
     padding-bottom: 2rem;
     padding-right: 1rem;
+}
+
+@media screen and (min-width: 900px) and (max-width: 1440px) {
+
+    body {
+        overflow: auto;
+    }
+
+    .canvas {
+        max-width: 40%;
+        height: auto;
+        margin-left: 2rem;
+    }
+
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: normal;
+        max-width: 50%;
+        height: auto;
+    }
+
+    .intro {
+        width: 200%;
+        margin-top: 0.5rem;
+        margin-left: 25rem;
+        padding-left: 0.5rem;
+    }
+
+    .intro-title {
+        font-size: 2.25rem;
+        line-height: 3.2rem;
+    }
+
+    .bold {
+        font-size: 2.3rem;
+    }
+
+    .intro-paragraph {
+        font-size: 0.95rem;
+        max-width: 35rem;
+        margin-top: -0.35rem;
+        margin-left: -1.4rem;
+        text-align:center;
+    }
+
+    .second-line-paragraph {
+        margin-left: -0.05rem;
+    }
+
+    .third-line-paragraph {
+        margin-left: 0.05rem;  
+    }
+
+    .cards {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 0.0125rem;
+        margin-top: 1rem;
+        margin-left: 5.8rem;
+    }
+
+    .supervisor-card {
+        position: relative;
+        width: 21.9rem;
+        height: 16rem;
+        grid-column: 1/2;
+        grid-row: 2/3;
+        margin-top: -4.1rem;
+        margin-right: 1.8rem;
+    }
+
+    .team-builder-card {
+        position: relative;
+        width: 21.9rem;
+        height: 16rem;
+        grid-column: 2/3;
+        grid-row: 1/2;
+        margin-top: 2rem;
+        margin-bottom: -8rem;
+    }
+
+    .karma-card {
+        position: relative;
+        width: 21.9rem;
+        height: 16rem;
+        grid-column: 2/3;
+        grid-row: 3/4;
+        margin-top: -9.5rem;
+        margin-bottom: -8rem;
+    }
+
+    .calculator-card {
+        position: relative;
+        width: 21.9rem;
+        height: 16rem;
+        grid-column: 3/4;
+        grid-row: 2/3;
+        margin-top: -4.1rem;
+        margin-left: 1.8rem;
+        
+    }
+
+    .supervisor-title, .team-builder-title, .karma-title, .calculator-title {
+        font-family: "Poppins";
+        font-weight: 600;
+        font-size: 1.25rem;
+        margin-top: 1rem;   
+    }
+
+    .supervisor-function, .team-builder-function, .karma-function, .calculator-function {
+        max-width: 80%;
+        font-family: "Poppins";
+        font-weight: 400;
+        font-size: 0.8rem;
+        margin-top: 0.4rem; 
+    }
+
+    .icon-supervisor, .icon-team-builder, .icon-karma, .icon-calculator {
+        width: 4rem;
+        margin-top: 1rem;
+    }
+
 }
