--- a/style.css
+++ b/style.css
@@ -243,7 +243,9 @@ body {
     .canvas {
         max-width: 40%;
         height: auto;
-        margin-left: 2rem;
+        margin-top: 5.5rem;
+        margin-left: 2.5rem;
+        margin-bottom: 1rem;
     }
 
     .container {
@@ -251,20 +253,23 @@ body {
         flex-wrap: wrap;
         justify-content: center;
         align-items: normal;
-        max-width: 50%;
+        max-width: 100%;
         height: auto;
     }
 
     .intro {
         width: 200%;
-        margin-top: 0.5rem;
-        margin-left: 25rem;
-        padding-left: 0.5rem;
+        margin-top: -2rem;
+        margin-left: 27rem;
+        padding-left: 0.3rem;
     }
 
     .intro-title {
-        font-size: 2.25rem;
-        line-height: 3.2rem;
+        width: 50%;
+        font-size: 2.3rem;
+        line-height: 3rem;
+        margin-left: 2.5rem;
+        margin-right: 1.5rem;
     }
 
     .bold {
@@ -272,11 +277,13 @@ body {
     }
 
     .intro-paragraph {
-        font-size: 0.95rem;
-        max-width: 35rem;
+        font-size: 0.98rem;
+        width: 50%;
         margin-top: -0.35rem;
-        margin-left: -1.4rem;
-        text-align:center;
+        margin-left: 0.02rem;
+        padding-left: 0.05rem;
+        padding-right: 0.25rem;
+        text-align: center;
     }
 
     .second-line-paragraph {
@@ -291,15 +298,16 @@ body {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
-        gap: 0.0125rem;
+        gap: 0.0155rem;
         margin-top: 1rem;
-        margin-left: 5.8rem;
+        margin-left: 8.7rem;
+        margin-bottom: 2rem;
     }
 
     .supervisor-card {
         position: relative;
-        width: 21.9rem;
-        height: 16rem;
+        width: 22rem;
+        height: 15.5rem;
         grid-column: 1/2;
         grid-row: 2/3;
         margin-top: -4.1rem;
@@ -308,33 +316,31 @@ body {
 
     .team-builder-card {
         position: relative;
-        width: 21.9rem;
-        height: 16rem;
+        width: 22rem;
+        height: 15.5rem;
         grid-column: 2/3;
         grid-row: 1/2;
-        margin-top: 2rem;
-        margin-bottom: -8rem;
+        margin-top: 1rem;
+        margin-bottom: -7rem;
     }
 
     .karma-card {
         position: relative;
-        width: 21.9rem;
-        height: 16rem;
+        width: 22rem;
+        height: 15.5rem;
         grid-column: 2/3;
         grid-row: 3/4;
-        margin-top: -9.5rem;
-        margin-bottom: -8rem;
+        margin-top: -10rem;
     }
 
     .calculator-card {
         position: relative;
-        width: 21.9rem;
-        height: 16rem;
+        width: 22rem;
+        height: 15rem;
         grid-column: 3/4;
         grid-row: 2/3;
-        margin-top: -4.1rem;
+        margin-top: -4.4rem;
         margin-left: 1.8rem;
-        
     }
 
     .supervisor-title, .team-builder-title, .karma-title, .calculator-title {
@@ -345,7 +351,7 @@ body {
     }
 
     .supervisor-function, .team-builder-function, .karma-function, .calculator-function {
-        max-width: 80%;
+        width: 90%;
         font-family: "Poppins";
         font-weight: 400;
         font-size: 0.8rem;
@@ -354,7 +360,8 @@ body {
 
     .icon-supervisor, .icon-team-builder, .icon-karma, .icon-calculator {
         width: 4rem;
-        margin-top: 1rem;
+        margin-top: 0.15rem;
+        margin-bottom: 1.5rem;
     }
 
 }
